--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     padding:0;
-    margin:0;
+    margin:10px;
 }
 
 #grid{
@@ -8,8 +8,8 @@ body{
     height: 960px;
 }
 
-.cell {
-    border: 1px solid gray;
+#container > div {
+    border: 1px solid black;
     min-width: 10px;
     min-height: 20px;
     display: inline-block;
