--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ body{
 #grid{
     width: 960px;
     height: 960px;
+    border-color: black;
 }
 
-#container > div {
-    border: 1px solid black;
-    min-width: 10px;
-    min-height: 20px;
-    display: inline-block;
-  }
+.cells{
+    background-color: grey;
+    border-color: red;
+    border-width: 10px;
+    width: 100px;
+    height: 100px;
+}
+
