--- a/style.css
+++ b/style.css
@@ -4,16 +4,17 @@ body{
 }
 
 #grid{
-    width: 960px;
-    height: 960px;
+    width: 300px;
+    height: 300px;
     border: 10px solid black;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .cells{
     background-color: grey;
-    border-color: red;
+    border: 0.5px solid red;
     border-width: 10px;
-    width: 100px;
-    height: 100px;
+    display: inline-block;
 }
 
