--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body{
     grid-template-rows: repeat(var(--x), auto);
 }
 
+
+.input{
+    font-size: 25px;
+    align-self: center;
+}
+
+
 .cells{
     background-color: grey;
     border: 0.5px solid azure;
