--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 
 
+
 body{
     padding:0;
     margin:10px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: skyblue;
 }
 
 h1{
-    align-self: center;
-    text-decoration: underline;
+    margin: auto;
+    
+}
+
+#title{
+    font-style: italic;
+    font-size: 50px;
 }
 
 #grid{
@@ -41,8 +48,8 @@ button{
 }
 
 .cells{
-    background-color: grey;
-    border: 0.5px solid azure;
+    background-color: white;
+    border: 0.5px solid black;
     border-width: 1px;
     display: inline-block;
 }
